<resources>
    <string name="app_name">Gestion Pedidos Mobile</string>

    <!-- LOGIN -->
    <string name="txt_email">Nombre de usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="btn_entrar">Ingresar</string>
    <string name="btn_registro">Registrarse</string>

    <!-- REGISTRAR -->
    <string name="lb_registro">Registrarse</string>
    <string name="txt_reg_email">Ingresar el email</string>
    <string name="txt_reg_password">Ingresar la contraseña</string>
    <string name="txt_reg_username">Ingresar el username</string>
    <string name="txt_reg_direccion">Ingrese su domicilio</string>
    <string name="txt_reg_campos_vacios">Complete todos los campos del formulario por favor</string>
    <string name="txt_reg_exito">Registro exitoso, Ahora inicie Sesión con su nuevo usuario</string>
    <string name="txt_reg_fallo">No se pudo completar el registro, por favor verifique sus datos</string>
    <string name="btn_reg_registro">Registrarme</string>

    <!-- Menu principal -->
    <string name="btn_main_perfil">Mi cuenta</string>
    <string name="btn_main_sucursales">Sucursales</string>
    <string name="btn_main_pedidos">Mis ordenes</string>
    <string name="btn_main_chat">Conversaciones</string>

    <!-- Mi perfil -->
    <string name="lb_perfil">Mi Información</string>
    <string name="txt_perfil_username">Username:</string>
    <string name="txt_perfil_direccion">Direccion:</string>
    <string name="txt_perfil_email">Correo:</string>
    <string name="btn_perfil_editar">Editar Información</string>
    <string name="btn_perfil_guardar">Guardar Información</string>
    <string name="btn_perfil_cerrar_sesion">Cerrar Sesión</string>
    <string name="txt_perfil_obtener_datos_fallo">No se pudo descargar sus datos. Intentelo de nuevo</string>
    <string name="txt_perfil_actualizar_datos_fallo">No se pudo actualizar sus datos. Intentelo de nuevo</string>
    <string name="txt_perfil_actualizar_datos_exito">Su datos fueron actualizados con éxito</string>
    <string name="txt_perfil_formulario_incompleto">No pueden haber campos vacios</string>

    <!-- Sucursales -->
    <string name="lb_sucursales">Sucursales</string>
    <string name="txt_sucur_buscar">Ingresar nombre de la Sucursal</string>
    <string name="btn_sucur_buscar">Buscar</string>
    <string name="lb_sucur_nombre">Nombre de la Sucursal</string>
    <string name="lb_sucur_direccion">Dirección de la Sucursal</string>

    <!-- Detalle de Sucursal -->
    <string name="lb_detalle">Detalle de la Sucursal</string>
    <string name="lb_detalle_nombre">Nombre de la Sucursal:</string>
    <string name="lb_detalle_direccion">Dirección de la Sucursal:</string>
    <string name="btn_detalle_chat">Enviar Mensaje</string>
    <string name="btn_detalle_ver_menu">Ver menús</string>
    <string name="txt_detalle_sin_menu_disponible">No hay menus que mostrar. Intentelo de nuevo</string>

    <!-- Menus de una sucursal -->
    <string name="lb_menus">Menús disponibles</string>
    <string name="lb_menus_nombre">Nombre del menú</string>
    <string name="lb_menus_descripcion">Descripción del menú</string>
    <string name="lb_menu_total">Total:</string>
    <string name="btn_menu_enviar_orden">Enviar Orden</string>


    <!-- Bandeja de Entrada -->
    <string name="lb_bandeja">Conversaciones Realizadas</string>
    <string name="txt_bandeja_buscar">Ingresar nombre de conversacionSucursal</string>
    <string name="btn_bandeja_buscar">Buscar</string>
    <string name="lb_bandeja_nombre_sucursal">Nombre de la conversacionSucursal</string>
    <string name="lb_bandeja_ultimo_mensaje">Ultimo mensaje con su hora</string>

    <!-- Mensajes -->
    <string name="lb_chat_yo">Yo</string>

    <!-- Realizar ordenes -->
    <string name="lb_re_orden">Hacer una orden</string>
    <string name="txt_re_nombre">Nombre del producto</string>
    <string name="txt_re_descripcion">Descripción: </string>
    <string name="txt_re_cantidad">Cantidad</string>
    <string name="txt_re_cantidad_numero">5</string>
    <string name="lb_re_precio">Precio:</string>
    <string name="txt_re_precio">$1.95</string>
    <string name="txt_re_total">Sub Total:</string>
    <string name="btn_re_ordenar">Enviar Orden</string>
    <string name="btn_re_cancelar">Cancelar Orden</string>
    <string name="lb_re_orden_exito">Su orden se está procesando.</string>
    <string name="lb_re_orden_fallo">Su orden no ha podido ser enviada. Consulte con el encargado</string>
    <string name="lb_re_orden_incompleta">No ha añadido productos a su orden</string>

    <!-- Listado de ordenes -->
    <string name="lb_ordenes">Ordenes</string>
    <string name="txt_orden_nombre_sucursar">Nombre de la conversacionSucursal</string>
    <string name="txt_orden_estado">Estado orden:</string>
    <string name="txt_orden_monto">$0.00</string>
    <string name="txt_orden_sin_resultados">No ha realizado ninguna orden aún</string>

    <!-- Detalle de ordenes -->
    <string name="lb_deta_or">Detalle de orden</string>
    <string name="btn_deta_or_chat">Enviar un Mensaje</string>
    <string name="btn_deta_or_cancelar">Cancelar la orden</string>
    <string name="lb_deta_or_fecha">Fecha:</string>
    <string name="lb_deta_or_fecha_example"></string>
    <string name="lb_deta_or_numero">#</string>
    <string name="lb_deta_or_nombre">Nombre</string>
    <string name="lb_deta_or_cantidad">Cant.</string>
    <string name="lb_deta_or_sub_total">Sub Total</string>
    <string name="lb_deta_or_total">Total:</string>
    <string name="lb_deta_or_total_example"></string>
    <string name="lb_deta_or_cancelada_exito">Su orden ha sido cancelada</string>
    <string name="lb_deta_or_cancelada_fallo">Su orden NO pudo ser cancelada. Pongase en contacto</string>

    <!-- Mensajes generales -->
    <string name="sin_internet">Por favor, conecte su dispositivo a una Red con Internet</string>
    <string name="error_recuperacion_datos">Hubo un error recuperando los datos, por favor intente de nuevo.</string>
</resources>
